# apex_fin

./: .gitignore  404.html  README.md  apex_fin.yaml  example_report_BYDD_gemini_flash_2_0.md  example_report_BYDD_gemini_flash_2_5.md  index.html  mcp_settings.json  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml
api/: index.html
configuration/: index.html
custom_prompts/: team.txt
custom_templates/: report_template.md
data_fetching/: index.html
docs/: api.md  configuration.md  data_fetching.md  how_to.md  index.md  installation.md  overview.md  prompts_customization.md
docs/reference/apex_fin/: __init__.md  config.md  index.md  main.md
docs/sample_reports/: example_report_BYDD_gemini_flash_2_0.md  example_report_BYDD_gemini_flash_2_5.md
how_to/: index.html
installation/: index.html
overview/: index.html
prompts_customization/: index.html
reference/apex_fin/: index.html
reference/apex_fin/__init__/: index.html
reference/apex_fin/agents/: index.html
reference/apex_fin/config/: index.html
reference/apex_fin/main/: index.html
reference/apex_fin/models/: index.html
reference/apex_fin/prompts/: index.html
reference/apex_fin/teams/: index.html
reference/apex_fin/templates/: index.html
reference/apex_fin/utils/: index.html
sample_reports/example_report_BYDD_gemini_flash_2_0/: index.html
sample_reports/example_report_BYDD_gemini_flash_2_5/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/overview/: index.html
site/reference/apex_fin/: index.html
site/search/: search_index.json
src/apex_fin/: __init__.py  config.py  main.py
src/apex_fin/agents/: base.py  (+8 more)
(+115 files in other folders)
