[project]
name = "apex-fin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas Bury", email = "bury.thomas@gmail.com" }
]
requires-python = ">=3.12, <=3.13"
dependencies = [
    "agno>=1.5.1",
    "duckduckgo-search>=8.0.2",
    "jinja2>=3.1.6",
    "litellm>=1.70.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "typer>=0.15.4",
    "yfinance>=0.2.61",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-git-authors-plugin>=0.9.5",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-material>=9.6.14",
    "mkdocstrings-python>=1.16.10",
    "mkdocstrings[python]>=0.25",
    "ruff>=0.11.11",
]
