[project]
name = "apex-fin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas Bury", email = "bury.thomas@gmail.com" }
]
requires-python = ">=3.12, <=3.13"
dependencies = [
    "agno>=1.5.1",
    "duckduckgo-search>=8.0.2",
    "jinja2>=3.1.6",
    "litellm>=1.70.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "typer>=0.15.4",
    "yfinance>=0.2.61",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.14",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=0.29.1",
    "ruff>=0.11.11",
]
